# CNNs_HPCAProject

./: .gitignore  ReadMe.md
cpu/: cpuCodeCILK.cpp  cpuCodeOpenMP.cpp  cpucode
cuda/: CMake.txt  CMakeLists.txt  adam_optimizer.cu  comiple.sh  compile.sh  conv_block.cu  dataset.cu  fully_connected.cu  main.cu
cuda/include/: adam_optimizer.cuh  conv_block.cuh  cuda_utils.cuh  dataset.cuh  fully_connected.cuh
cuda/include/kernels/: activation_kernels.cuh  batchnorm_kernels.cuh  conv_kernels.cuh  pooling_kernels.cuh
cuda/kernels/: activation_kernels.cu  batchnorm_kernels.cu  conv_kernels.cu  pooling_kernels.cu
cuda/tests/: adam_optimizer_test.cpp  conv_block_forward_test.cu  conv_block_test.cpp  dataset_test.cpp  dataset_test.cu  fully_connected_test.cpp  fully_connected_test.cu  kernel_test.cpp  relu_kernel_test.cu  simple_kernel_test.cu  test_batchnorm.cu  test_conv.cu  test_conv_block.cu  test_fully_connected.cu  test_pooling.cu  test_relu.cu
results/: result.csv  result.csv.numbers  results.csv  visualization.ipynb
tests/: test_batchnorm.cu
